--- a/Contactme.html
+++ b/Contactme.html
@@ -12,11 +12,16 @@
   <li><a href="https://web.facebook.com/matheus.carrer">Facebook</a></li>
   <li>+55 (42) 99991-6553</li>
   <br>
-  <form class="" action="index.html" method="post">
-    <label>Seu Nome</label>
-    <input type="text" name="" value="">
-    <input type="submit" name="" value="Submit">
-
+  <form action="mailto:matheusscarrer@gmail.com" method="post" enctype="text/plain">
+    <label>Seu nome</label>
+    <input type="text" name="Seu nome" value=""><br>
+    <label>Seu sobrenome</label>
+    <input type="text" name="Seu sobrenome" value=""><br>
+    <label>Seu e-mail</label>
+    <input type="email" name="Seu e-mail" value=""><br>
+    <label>Sua mensagem</label><br>
+    <textarea name="Sua mensagem" rows="10" cols="30"></textarea><br>
+    <input type="submit" name="" value="Enviar">
   </form>
 
 </body>
