--- a/index.html
+++ b/index.html
@@ -3,65 +3,69 @@
 
 <head>
   <meta charset="utf-8">
-  <title>🚧 CARRER Engenharia </title>
+  <title>🚧CARRER Engenharia </title>
 </head>
 
-<body>
+<body style="background-color: #F2F5C8;">
   <table cellspacing="20">
     <tr>
       <td><img src="Foto_perfil.jpg" alt="Matheus Santana Carrer" height="200"></td>
-      <td><h1> Matheus Santana Carrer</h1>
-          <p><em>Engenheiro Civil e <a href="https://www2.uepg.br/proplan/composicao/">diretor de planejamento
-            físico da Universidade Estadual de Ponta Grossa</a></em></p>
-          <p>Engenheiro Civil, gamer e motociclista</p></td>
+      <td>
+        <h1> Matheus Santana Carrer</h1>
+        <p><em>Engenheiro Civil e <a href="https://www2.uepg.br/proplan/composicao/">diretor de planejamento
+              físico da Universidade Estadual de Ponta Grossa</a></em></p>
+        <p>Engenheiro Civil, gamer e motociclista</p>
+      </td>
     </tr>
   </table>
   <hr size="3" noshade>
   <h3>Educação</h3>
-    <ul>
-      <li>Escola Municipal Maria Laura</li>
-      <li>Colégio Sant'Ana</li>
-      <li>Universidade Estadual de Ponta Grossa</li>
-    </ul>
+  <ul>
+    <li>Escola Municipal Maria Laura</li>
+    <li>Colégio Sant'Ana</li>
+    <li>Universidade Estadual de Ponta Grossa</li>
+  </ul>
   <hr size="3" noshade>
   <h3>Experiência profissional</h3>
-    <table cellspacing="10">
-      <head>
-        <tr>
-          <th>Experiências</th>
-        </tr>
-      </head>
-      <body>
-        <tr>
-          <td>01/2018 - 12/2018</td>
-          <td>Prefeitura Municipal de Ponta Grossa</td>
-        </tr>
-        <tr>
-          <td>07/2018 - 12/2018</td>
-          <td>Construtora Baza</td>
-        </tr>
-        <tr>
-          <td>07/2019 - atualmente</td>
-          <td>Universidade Estadual de Ponta Grossa</td>
-        </tr>
-      </body>
-    </table>
-    <hr size="3" noshade>
-    <h3>Habilidates</h3>
-      <table cellspacing="10">
-        <tr>
-          <td>Autocad</td>
-          <td>★★★★</td></td>
-        </tr>
-        <tr>
-          <td>Archicad</td>
-          <td>★★★</td>
-        </tr>
-        <tr>
-          <td>Sketchup</td>
-          <td>★★★</td>
-        </tr>
-      </table>
+  <table cellspacing="10">
+    <head>
+      <tr>
+        <th>Experiências</th>
+      </tr>
+    </head>
+
+    <body>
+      <tr>
+        <td>01/2018 - 12/2018</td>
+        <td>Prefeitura Municipal de Ponta Grossa</td>
+      </tr>
+      <tr>
+        <td>07/2018 - 12/2018</td>
+        <td>Construtora Baza</td>
+      </tr>
+      <tr>
+        <td>07/2019 - atualmente</td>
+        <td>Universidade Estadual de Ponta Grossa</td>
+      </tr>
+    </body>
+  </table>
+  <hr size="3" noshade>
+  <h3>Habilidates</h3>
+  <table cellspacing="10">
+    <tr>
+      <td>Autocad</td>
+      <td>★★★★</td>
+      </td>
+    </tr>
+    <tr>
+      <td>Archicad</td>
+      <td>★★★</td>
+    </tr>
+    <tr>
+      <td>Sketchup</td>
+      <td>★★★</td>
+    </tr>
+  </table>
   <hr size="3" noshade>
   <a href="Hobbies.html">Hobbies</a>
   <br>
